Name:                backend
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          honza.hrk@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable run-sloview
  hs-source-dirs: backend/src
  main-is: Main.hs

  other-modules:
    Handler.Index,
    Handler.Upload

  Build-depends:
    base,
    blaze-html,
    snap-core,
    snap-server,
    text

  ghc-options:
    -threaded
    -Wall
    -fwarn-tabs
    -funbox-strict-fields
    -O2
